# pryt-voice

./: .gitignore  .prettierignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  CLAUDE.md  PLAN-RUST-AUDIO.md  PLAN-WIDGET.md  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  tsconfig.web.json  vite.config.ts  vitest.config.ts  widget.html
.agents/skills/frontend-testing/: SKILL.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md  theme_system.md
scripts/: bump-version.ts  setup-whisper.sh
src/: App.module.scss  App.tsx  main.tsx  recorder.ts  styles.scss  types.ts  vite-env.d.ts  widget.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  widget-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  main.rs  model_manager.rs  paste.rs  whisper.rs  widget.rs
src/__tests__/: recordingFlow.test.tsx
src/components/: Header.tsx  MicSelect.tsx  RecordButton.tsx  StatusBar.tsx  TranscriptArea.tsx  TranscriptBlock.tsx
src/components/Header/: Header.module.scss  Header.tsx
src/components/HistoryTab/: HistoryTab.module.scss  HistoryTab.tsx
src/components/MicSelect/: MicSelect.module.scss  MicSelect.tsx  index.ts
src/hooks/: useCopyText.ts  useRecorder.ts  useTranscription.ts
src/main/: index.ts  model-manager.ts  whisper.ts
src/preload/: index.ts
src/renderer/: index.html
src/shared/: storageKeys.ts  types.ts
src/stores/: useAppStore.ts
(+56 files in other folders)
